if (is_android) {
  import("//build/config/android/rules.gni")
  dep_base = rebase_path("./", "//")
} else {
  dep_base = rebase_path("../..", "//")
}

config("external_config") {
  include_dirs = [ ".." ]
}

config("internal_config") {
}

source_set("tracking-protection") {
  public_configs = [ ":external_config" ]
  configs += [ ":internal_config" ]
  sources = [
    "../TPParser.cpp",
    "../TPParser.h",
    "../TrackerData.cpp",
    "../TrackerData.h",
    "../FirstPartyHost.cpp",
    "../FirstPartyHost.h",
  ]

  deps = [
    rebase_path("hashset-cpp/brave:hashset-cpp", dep_base),
    rebase_path("bloom-filter-cpp/brave:bloom-filter-cpp", dep_base),
  ]
}

